chore: fix GameSnapshotTest minor get to getFirst() + updated comment